mc/docs/evidence/run-logs/2026-06-29/modularize-hyperion-block-loader.baseline-hyperion-loader-tests.run.log
command=cargo test -p hyperion simulation::blocks::loader -- --nocapture
cwd=/home/brittonr/git/mc/hyperion
started_at=2026-06-29T06:05:02Z
   Compiling tokio-util v0.7.15
   Compiling libz-ng-sys v1.1.22
   Compiling bevy_ecs v0.16.1
   Compiling valence_generated v0.2.0-alpha.1+mc.1.20.1 (https://github.com/TestingPlant/valence?branch=feat-bytes#fb792dcb)
   Compiling time v0.3.41
   Compiling openssl v0.10.81
   Compiling der v0.7.10
   Compiling bevy_math v0.16.1
   Compiling tokio-rustls v0.26.2
   Compiling rustc-hash v2.1.1
   Compiling iroh-quinn-udp v0.5.7
   Compiling nom v7.1.3
   Compiling futures-buffered v0.2.13
   Compiling phf_macros v0.11.3
   Compiling snafu v0.8.5
   Compiling curve25519-dalek v4.1.3
   Compiling futures v0.3.31
   Compiling precis-core v0.1.11
   Compiling netlink-packet-utils v0.5.2
   Compiling sha2 v0.10.9
   Compiling bevy_derive v0.12.1
error[E0554]: `#![feature]` may not be used on the stable release channel
  --> /home/brittonr/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/rustc-hash-2.1.1/src/lib.rs:18:34
   |
18 | #![cfg_attr(feature = "nightly", feature(hasher_prefixfree_extras))]
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0554`.
   Compiling flate2 v1.1.1
   Compiling webpki-roots v0.26.8
error: could not compile `rustc-hash` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
finished_at=2026-06-29T06:05:15Z
exit_status=101
